--- a/src/main/resources/FXMLYTChannelFind.fxml
+++ b/src/main/resources/FXMLYTChannelFind.fxml
@@ -124,7 +124,7 @@
                   <Image url="@icons/arrow_back.png" />
                </image>
             </ImageView>
-            <Label fx:id="timerLabel" layoutX="361.0" layoutY="14.0" prefHeight="17.0" prefWidth="55.0" text="s" textFill="#b9a5a5" />
+            <Label fx:id="timerLabel" layoutX="361.0" layoutY="14.0" prefHeight="17.0" prefWidth="55.0" textFill="#b9a5a5" />
          </children>
       </AnchorPane>
    </center>
